--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body onscroll="func()" id="bdy">
     <div id="navbar">
-        <a href="jayaditya.html"><i class="material-icons" style="font-size:25px">home</i></a>
+        <a href="index.html"><i class="material-icons" style="font-size:25px">home</i></a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
         <a id="icons" href="https://www.linkedin.com/in/jayaditya369/"><i class="fa fa-linkedin-square" style="font-size:25px"></i></a>
